@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-03-2006 changed: file browser, added "Add network location..." to strings.xml
  - 01-03-2006 fixed: overlay icon was not serialized to disc
  - 01-03-2006 fixed: HTMLScraper.dll couldn't handle "Monty Python and the Holy Grail" plot info, due to a coded tag on the IMDb.com page.
  - 01-03-2006 changed: Music and Video overlays are closed/open before we render the screen (allows vis on music overlay among other things)
